--- a/frontend/templates/productos.html
+++ b/frontend/templates/productos.html
@@ -199,8 +199,8 @@
                     <div class="form-group">
                         <label for="editar-estado">Estado:</label>
                         <select id="editar-estado" required>
-                            <option value="alta">Alta</option>
-                            <option value="baja">Baja</option>
+                            <option value="alta">alta</option>
+                            <option value="baja">baja</option>
                         </select>
                     </div>
                     <button type="button" class="btn-success" id="guardarCambiosBtn">Guardar</button>
