--- a/frontend/templates/proveedores.html
+++ b/frontend/templates/proveedores.html
@@ -165,57 +165,57 @@
                 <form id="editarProveedorForm" data-id="">
                     <div class="form-group">
                         <label for="nombre-proveedor">Nombres:</label>
-                        <input type="text" id="nombre">
+                        <input type="text" id="enombre">
                     </div>
 
                     <div class="form-group">
                         <label for="numero-cuit">Número de CUIT:</label>
-                        <input type="number" id="cuit">
+                        <input type="number" id="ecuit">
                     </div>
 
                     <div class="form-group">
                         <label for="razon-social">Razón Social:</label>
-                        <input type="text" id="razon_social">
+                        <input type="text" id="erazon_social">
                     </div>
 
                     <div class="form-group">
                         <label for="ciudad">Ciudad:</label>
-                        <input type="text" id="ciudad">
+                        <input type="text" id="eciudad">
                     </div>
 
                     <div class="form-group">
                         <label for="codigo-postal">Código Postal:</label>
-                        <input type="number" id="codigo_postal">
+                        <input type="number" id="ecodigo_postal">
                     </div>
 
                     <div class="form-group">
                         <label for="barrio">Barrio:</label>
-                        <input type="text" id="barrio">
+                        <input type="text" id="ebarrio">
                     </div>
 
                     <div class="form-group">
                         <label for="direccion">Dirección:</label>
-                        <input type="text" id="direccion">
+                        <input type="text" id="edireccion">
                     </div>
 
                     <div class="form-group">
                         <label for="numero">Número:</label>
-                        <input type="number" id="numero">
+                        <input type="number" id="enumero">
                     </div>
 
                     <div class="form-group">
                         <label for="telefono">Teléfonos:</label>
-                        <input type="number" id="telefono">
+                        <input type="number" id="etelefono">
                     </div>
 
                     <div class="form-group">
                         <label for="mail">Email:</label>
-                        <input type="email" id="mail">
+                        <input type="email" id="email">
                     </div>
 
                     <div class="form-group">
                         <label for="editar-estado">Estado:</label>
-                        <select id="estado" required>
+                        <select id="eestado" required>
                             <option value="alta">Alta</option>
                             <option value="baja">Baja</option>
                         </select>
@@ -223,7 +223,7 @@
 
                     <div class="form-group">
                         <label for="observaciones">OBSERVACIONES:</label>
-                        <textarea id="descripcion" placeholder="Escriba las observaciones..."></textarea>
+                        <textarea id="edescripcion" placeholder="Escriba las observaciones..."></textarea>
                     </div>
                     <button type="button" class="btn-success" id="guardarCambiosBtn">Guardar</button>
                 </form>
@@ -239,27 +239,27 @@
                 <span class="linea-divisoria"></span>
                 <div>
                     <h3 class="modal-title">Información Personal</h3>
-                    <p><strong>Nombre:</strong> <span id="nombre"></span></p>
-                    <p><strong>Razón Social:</strong> <span id="razon_social"></span></p>
-                    <p><strong>CUIT:</strong> <span id="cuit"></span></p>
+                    <p><strong>Nombre:</strong> <span id="dnombre"></span></p>
+                    <p><strong>Razón Social:</strong> <span id="drazon_social"></span></p>
+                    <p><strong>CUIT:</strong> <span id="dcuit"></span></p>
                     <span class="linea-divisoria"></span>
 
                     <h3 class="modal-title">Contactos</h3>
-                    <p><strong>Email:</strong> <span id="mail"></span></p>
-                    <p><strong>Teléfono:</strong> <span id="telefono"></span></p>
+                    <p><strong>Email:</strong> <span id="dmail"></span></p>
+                    <p><strong>Teléfono:</strong> <span id="dtelefono"></span></p>
                     <span class="linea-divisoria"></span>
 
                     <h3 class="modal-title">Ubicación</h3>
-                    <p><strong>Ciudad:</strong> <span id="ciudad"></span></p>
-                    <p><strong>Código Postal:</strong> <span id="codigo_postal"></span></p>
-                    <p><strong>Barrio:</strong> <span id="barrio"></span></p>
-                    <p><strong>Dirección:</strong> <span id="direccion"></span></p>
-                    <p><strong>Número:</strong> <span id="numero"></span></p>
-                    <p><strong>Fecha de Ingreso:</strong> <span id="fecha_ingreso"></span></p>
+                    <p><strong>Ciudad:</strong> <span id="dciudad"></span></p>
+                    <p><strong>Código Postal:</strong> <span id="dcodigo_postal"></span></p>
+                    <p><strong>Barrio:</strong> <span id="dbarrio"></span></p>
+                    <p><strong>Dirección:</strong> <span id="ddireccion"></span></p>
+                    <p><strong>Número:</strong> <span id="dnumero"></span></p>
+                    <p><strong>Fecha de Ingreso:</strong> <span id="dfecha_ingreso"></span></p>
                     <span class="linea-divisoria"></span>
 
                     <h3 class="modal-title">Estado del Proveedor</h3>
-                    <p><strong>Estado:</strong> <span id="estado"></span></p>
+                    <p><strong>Estado:</strong> <span id="destado"></span></p>
                     <span class="linea-divisoria"></span>
                 </div>
             </div>
