--- a/frontend/templates/stock.html
+++ b/frontend/templates/stock.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/stock.css">
     <link rel="stylesheet" href="../assets/css/estilosGenerales.css">
-    <title>Lista de Stock</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <title>Stock</title>
 </head>
-
 <body>
     <div class="container-fluid">
         <nav class="navbar">
@@ -25,18 +23,16 @@
                         <p class="user-name" id="nombreApellido"></p>
                         <p class="user-email" id="emailUsuario"></p>
                     </div>
-                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir"
-                        id="iconoSalir">
+                    <img src="../assets/img/icono-salir.svg" alt="cerrar sesion" class="align-self-center icono-salir" id="iconoSalir">
                 </div>
             </div>
         </nav>
-
 
         <div class="header-title">
             <h2>STOCK</h2>
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Buscar..." id="buscarInput">
-                <span class="search-icon" id="iconoBuscar">
+                <span class="search-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-search" viewBox="0 0 16 16">
                         <path
@@ -53,17 +49,17 @@
                         <tr>
                             <th>Codigo</th>
                             <th>Nombre</th>
-                            <th>Proveedor</th>
                             <th>Cantidad</th>
-                            <th>Precio Venta</th>
-                            <th>Estado</th>
                         </tr>
                     </thead>
-                    <tbody id="materiales-body">
+                    <tbody id="stock-body">
+
                     </tbody>
                 </table>
             </div>
         </section>
+
+
     </div>
 
 
@@ -71,5 +67,4 @@
     <script src="../scripts/stock.js"></script>
     <script src="../scripts/cerrarsesion.js"></script>
 </body>
-
 </html>
